<resources>
    <string name="app_name">GKM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_help">Help</string>
    <string name="text_gkm_name">Ghanshyamnagar Kishor Mandal</string>
    <string name="text_alert_title">@string/app_name</string>
    <string name="text_no_connection">No Connection</string>
    <string name="text_not_internet_msg">You are not connected to the Internet. Make sure WI-FI or mobile data is ON and try again.</string>
    <string name="text_try_again">Try Again</string>

    <!--Login Screen-->
    <string name="text_title">Welcome to Attendance manager</string>
    <string name="text_sign_in_to_continue">Sign in to continue</string>
    <string name="user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_center_name">Center Name</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_any_queries">Any Queries?</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="error_please_enter_your_user_id">Please enter your Id.</string>
    <string name="error_please_enter_your_password">Please enter your password.</string>

    <!--Landing Screen-->
    <string name="text_attendance">Attendance</string>
    <string name="text_view_report">View Report</string>
    <string name="text_profile">Profile</string>

    <!--Admin Landing Screen-->
    <string name="text_add_member">Add member</string>
    <string name="text_view_member">View member</string>

    <!--Attendance Screen-->
    <string name="text_welcome">Welcome,\n%s %s</string>
    <string name="text_user_full_name">%s %s</string>
    <string name="text_submit">Submit</string>
    <string name="text_present">Present</string>
    <string name="text_absent">Absent</string>
    <string name="text_not_known">Not Known</string>
    <string name="text_report">Report?</string>
    <string name="text_please_fill">Please fill up respective member\'s attendance!!\nAs of\nAthvadik Sabha Dt. %s</string>
    <string name="text_not_assigned_any_members">Not assigned any members.</string>
    <string name="text_are_you_sure_you_want_to_save">Are you sure you want to save?</string>
    <string name="text_are_you_sure_you_want_to_report">Are you sure you want to report?</string>
    <string name="text_save">Save</string>

    <!--Report Screen-->
    <string name="text_reported_by">Reported by : %s %s</string>
    <string name="text_no_reports">No reports</string>
    <string name="text_title_report">Report</string>

    <!--Profile Screen-->
    <string name="text_logout">Logout</string>
    <string name="text_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>

    <!-- Add Member -->
    <string name="hint_first_name">Firstname</string>
    <string name="hint_last_name">Lastname</string>
    <string name="hint_email">Email</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_assign_to">Assign To</string>
    <string name="text_add">Add</string>
    <string name="text_please_enter_first_name">Please enter your first name.</string>
    <string name="text_please_enter_last_name">Please enter your last name.</string>
    <string name="text_please_enter_contact_number">Please enter your contact number.</string>
    <string name="text_please_enter_valid_contact">Please enter valid contact number.</string>
    <string name="text_please_enter_email">Please enter your email.</string>
    <string name="text_please_enter__valid_email">Please enter valid email.</string>

    <!-- Edit Member -->
    <string name="text_update">Update</string>

    <!--Users List-->
    <string name="text_members">Members</string>
    <string name="text_users">Users</string>
    <string name="text_no_users">No users</string>
    <string name="text_no_members">No members</string>
    <string name="text_not_assigned">Not assigned</string>
    <string name="text_assigned">Assigned</string>
    <string name="text_are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
</resources>