<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_4">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAttendeeName"
            style="@style/Poppins14Bold"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:textColor="@color/title_text_color"
            app:layout_constraintEnd_toStartOf="@id/cbReport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Milan Vadhel" />

        <RadioGroup
            android:id="@+id/rgAttendance"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            app:layout_constraintEnd_toStartOf="@id/cbReport"
            app:layout_constraintStart_toStartOf="@id/tvAttendeeName"
            app:layout_constraintTop_toBottomOf="@+id/tvAttendeeName">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbPresent"
                style="@style/BaseRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_present"
                android:layout_marginEnd="@dimen/dp_10"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbAbsent"
                style="@style/BaseRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_absent" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbReport"
            style="@style/BaseCheckBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/text_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="@dimen/dp_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="parent"
            android:includeFontPadding="false"
            style="@style/BaseButton"
            android:text="@string/text_save"
            android:layout_marginHorizontal="@dimen/dp_4"
            app:layout_constraintTop_toBottomOf="@id/rgAttendance"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
