<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".ui.main.attendance.AttendanceFragment">

    <include
        android:id="@+id/ilAttendanceHeader"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserName"
        style="@style/Poppins22Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/text_welcome"
        android:textColor="@color/title_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilAttendanceHeader"
        tools:text="Welcome,\nHarivadan B. Patel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPleaseFill"
        style="@style/Poppins12Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:textAlignment="center"
        android:textColor="@color/sub_title_text_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        tools:text="@string/text_please_fill" />

    <!--    <androidx.appcompat.widget.AppCompatSpinner-->
    <!--        android:id="@+id/spAttendees"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height='?actionBarSize'-->
    <!--        android:layout_marginHorizontal="@dimen/dp_16"-->
    <!--        android:layout_marginTop="@dimen/dp_25"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tvPleaseFill" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoAttendees"
        style="@style/Poppins12Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/text_not_assigned_any_members"
        android:textAlignment="center"
        android:textColor="@color/sub_title_text_color"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPleaseFill" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAttendees"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPleaseFill"
        tools:itemCount="5"
        tools:listitem="@layout/item_attendee" />

    <!--    <RadioGroup-->
    <!--        android:id="@+id/rgMark"-->
    <!--        android:layout_width="@dimen/dp_0"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="@dimen/dp_16"-->
    <!--        android:layout_marginTop="@dimen/dp_16"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/btnSubmit"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/spAttendees"-->
    <!--        app:layout_constraintVertical_bias="0">-->

    <!--        <androidx.appcompat.widget.AppCompatRadioButton-->
    <!--            android:id="@+id/rbPresent"-->
    <!--            style="@style/BaseRadioButton"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/text_present" />-->

    <!--        <androidx.appcompat.widget.AppCompatRadioButton-->
    <!--            android:id="@+id/rbAbsent"-->
    <!--            style="@style/BaseRadioButton"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="@dimen/dp_3"-->
    <!--            android:text="@string/text_absent" />-->

    <!--        <androidx.appcompat.widget.AppCompatRadioButton-->
    <!--            android:id="@+id/rbNotKnown"-->
    <!--            style="@style/BaseRadioButton"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="@dimen/dp_3"-->
    <!--            android:text="@string/text_not_known" />-->
    <!--    </RadioGroup>-->

    <!--    <androidx.constraintlayout.widget.Group-->
    <!--        android:id="@+id/gAttendeesAndMarkButtons"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="visible"-->
    <!--        app:constraint_referenced_ids="spAttendees,rgMark" />-->

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/btnSubmit"-->
    <!--        style="@style/BaseButton"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/text_submit"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>